# betteremail

./: .gitignore  README.md  graph.py  main.py  pyproject.toml  requirements.txt
betteremail/: common.py  gmail.py  graph.py  utils.py
tests/: test_graph.py  test_utils.py
